# Bet_game

./: Anchor.toml  id.json
frontend/: package-lock.json  package.json
frontend/src/: App.js
programs/BettingGame/: Cargo.toml
programs/BettingGame/src/: lib.rs
tests/: BettingGame.ts
wallet/: devnet.json
